apps/flaresolverr/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flaresolverr
  labels:
    app.kubernetes.io/name: flaresolverr
