apps/flaresolverr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flaresolverr-httproute
  namespace: flaresolverr
  labels:
    app.kubernetes.io/name: flaresolverr
spec:
  hostnames:
  - "flaresolverr.${DOMAIN}"
  parentRefs:
  - name: traefik-gateway
    namespace: traefik
    sectionName: websecure
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: flaresolverr
      port: 8191
